fix header on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
 }
 
 .App-header {
-  height: 180px;
   padding: 20px;
   /* background-color: rgba(0, 0, 0, .1); */
 }
